Adicionando imagens na linha Brava

--- a/src/translate/translations/en.json
+++ b/src/translate/translations/en.json
@@ -151,6 +151,10 @@
     "mesma-categoria": "Same category product",
     "sujeitas-a-mudanca": "All specifications are subject to change without notice. In case of doubts. please confirm with the commercial department",
     "dados-tec": "Technical Data",
+    
+    "novidade": "INNOVATION AND EXCLUSIVITY!",
+    "desc-novidade": "The new rotor of the BRAVA Laboremus line of machines, (BRAVA 1, BRAVA 2), has a differential from all the others seen on the market, the possibility of changing the fixed and mobile hammers interchangeably, in a single rotor, allowing a simple exchange, so that it greatly improves the shredding capacity required by each agricultural crop, achieving the highest quality in the chopping and shredding process.",
+    "patente": "Patent pending models.",
 
     "filtrar": "Filter",
     "filtros": "Filters",
