--- a/src/translate/translations/es.json
+++ b/src/translate/translations/es.json
@@ -152,6 +152,10 @@
     "sujeitas-a-mudanca": "Todas las especificaciones están sujetas a cambios sin previo aviso. En caso de dudas. por favor confirmar con el departamento comercial",
     "dados-tec": "Datos técnicos",
 
+    "novidade": "¡INNOVACIÓN Y EXCLUSIVIDAD!",
+    "desc-novidade": "El nuevo rotor de la línea de máquinas BRAVA Laboremus, (BRAVA 1, BRAVA 2), tiene como diferencial a todos los demás vistos en el mercado, la posibilidad de cambiar los martillos fijos y móviles indistintamente, en un solo rotor, permitiendo un simple de intercambio, por lo que mejora considerablemente la capacidad de triturado que requiere cada cultivo agrícola, consiguiendo la máxima calidad en el proceso de picado y triturado.",
+    "patente": "Modelos pendientes de patente.",
+
     "filtrar": "Filtrar",
     "filtros": "Limpiar",
 
