--- a/src/translate/translations/ptbr.json
+++ b/src/translate/translations/ptbr.json
@@ -153,6 +153,10 @@
     "sujeitas-a-mudanca": "Todas as especificações estão sujeitas à mudanças sem notificação. Em caso de dúvidas. por favor, certifique com o departamento comercial",
     "dados-tec": "Dados técnicos",
 
+    "novidade": "INOVAÇÃO E EXCLUSIVIDADE!",
+    "desc-novidade": "O novo rotor da linha de máquinas BRAVA Laboremus, (BRAVA 1, BRAVA 2), tem um diferencial de todos os outros vistos no mercado, a possibilidade de trocar os martelos fixos e moveis de forma intercambiável, em um único rotor, permitindo uma simples troca, de modo que melhora muito a capacidade de trituração exigida por cada cultura agrícola, alcançando a máxima qualidade no processo de picagem e trituração.",
+    "patente": "Modelos com patente requerida.",
+
     "filtrar": "Filtrar",
     "filtros": "Filtros",
     "limpar": "Limpar",
