Implementando sistema de busca de peças de reposição

--- a/src/translate/translations/ptbr.json
+++ b/src/translate/translations/ptbr.json
@@ -7,6 +7,7 @@
     "inicio": "Início",
     "sobre": "Sobre a empresa",
     "seja-revendedor": "Seja revendedor",
+    "pecas-de-reposicao": "Peças de reposição",
     "condicoes-especiais": "Condições especiais",
     "linha-agricola": "Linha agrícola",
     "linha-ecologica": "Linha ecológica",
