--- a/src/translate/translations/en.json
+++ b/src/translate/translations/en.json
@@ -7,6 +7,7 @@
     "inicio": "Home",
     "sobre": "About the company",
     "seja-revendedor": "Be a reseller",
+    "pecas-de-reposicao": "Spare parts",
     "condicoes-especiais": "Special conditions",
     "linha-agricola": "Agricultural line",
     "linha-ecologica": "Ecological line",
