--- a/src/translate/translations/es.json
+++ b/src/translate/translations/es.json
@@ -7,6 +7,7 @@
     "inicio": "Comenzar",
     "sobre": "Sobre la empresa",
     "seja-revendedor": "Ser un revendedor",
+    "pecas-de-reposicao": "Piezas de repuesto",
     "condicoes-especiais": "Condiciones especiales",
     "linha-agricola": "Línea agrícola",
     "linha-ecologica": "Línea ecológica",
