Adicionando tag meta e atualizando o footer

--- a/src/translate/translations/ptbr.json
+++ b/src/translate/translations/ptbr.json
@@ -78,7 +78,7 @@
     "contato": "Contato",
     "localizacao": "Localização",
     "redes-sociais": "Redes sociais",
-    "copy": "©️2023 - LABOREMUS - Indústria e Comércio de Máquinas Agrícolas LTDA. Todos os direitos reservados.",
+    "copy": "©️2024, LABOREMUS - Indústria e Comércio de Máquinas Agrícolas LTDA. CNPJ: 24.104.861/0001-88",
     "dev": "Desenvolvido por",
 
     "laboremus-industria": "LABOREMUS - INDÚSTRIA LTDA.",
