Adicionando tag meta para facebook

--- a/src/translate/translations/en.json
+++ b/src/translate/translations/en.json
@@ -78,7 +78,7 @@
     "contato": "Contact",
     "localizacao": "Location",
     "redes-sociais": "Social media",
-    "copy": "©️2023 - LABOREMUS - Industry and Trade of Agricultural Machines. All rights reserved.",
+    "copy": "©️2023 - LABOREMUS IND E COM DE MAQUINAS AGRICOLAS LTDA. All rights reserved.",
     "dev": "Developed by",
 
     "laboremus-industria": "LABOREMUS - INDUSTRY LTDA.",
