--- a/src/translate/translations/es.json
+++ b/src/translate/translations/es.json
@@ -78,7 +78,7 @@
     "contato": "Contacto",
     "localizacao": "Ubicación",
     "redes-sociais": "Redes sociais",
-    "copy": "©️2023 - LABOREMUS - Industria y Comercio de Máquinas Agrícolas LTDA. Todos los derechos reservados.",
+    "copy": "©️2023 - LABOREMUS IND E COM DE MAQUINAS AGRICOLAS LTDA. Todos los derechos reservados.",
     "dev": "Desarrollado por",
 
     "laboremus-industria": "LABOREMUS - INDUSTRIA LTDA.",
